src/main/main.css
.mainContentWrapper{
    height: 100dvh;
    background-color: var(--modalBackGround);
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 0px 5px;
    box-sizing: border-box;
}

.headerButtonsWrapper{
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
}

.menuIconWrapper{
    width: var(--iconSize);
    height: var(--iconSize);
    background-color: var(--modalBackGround);
    border-radius: 100%;
    cursor: pointer;
    border: 3px solid;
    border-color: transparent;
}

.headerWrapper {
    border-radius: 15px;
    box-sizing: border-box;
    padding: 5px;
    display: flex;
    align-items:center;
    background-color: var(--secondaryColor);
    height: 58px;
    width: 100%;
}

.mainHeaderButton{
    box-sizing: border-box;
    position: relative;
    border-radius:20px; 
    min-width: 80px;
    border-color : darkslategray;
    background-color:  var(--secondaryColor);
    height: 40px;
    font-size: 18px;
    color : darkslategray;
    border : 2px solid;
    white-space: nowrap;
}

.mainHeaderButton:hover,
  .mainHeaderButton:focus {
    color: #122620;
    background-color:var(--secondaryColor);
    text-decoration: none;
    cursor: pointer;
  }

.itemsWrapper{
    display: flex;
    justify-content: center;
    width: 100%;
    height: calc(100% - 140px);
    box-sizing: border-box;
    margin-top: 5px;
}

.itemWrapper{
    width: 100%;
    box-sizing: border-box;
    display: flex;
    justify-content: center;
}

.itemListWrapper {
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    align-items: start;
    width: 100%;
    border-radius:15px; 
    background-color: var(--primaryColor);
    height: 100%;
    overflow: auto;
}

.item {
    display: flex;
    justify-content: space-between;
    box-sizing: border-box;
    align-items: center;
    width: 100%;
    background-color:var(--secondaryColor);
    margin-bottom: 5px;
    height: 55px;
    padding: 5px;
}

.itemWrapper:last-child{
    .item{
        border-bottom-left-radius: 20px;
        border-bottom-right-radius: 20px;
    }
}

.itemDesc {
    margin:0;
    max-width: 75%;
    margin-left: 5px;
    font-size: var(--descriptionFontSize);
    color: var(--fontColor);
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.itemAction{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 5px;
}

.menuIcon{
    height: var(--iconSize);
    width:  var(--iconSize);
}

